<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:orientation="vertical"
              android:padding="@dimen/horizontal_padding"
              tools:context="com.myanmarexperiment.datnt.myanmarfontexperiment.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zawgyi_font_label"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_padding"
                    android:inputType="none"
                    android:text="@string/zawgyi_string"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unicode_font_label"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_padding"
                    android:inputType="none"
                    android:text="@string/unicode_string"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnZawgyiContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/application_zawgyi_font_label"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_padding"
                    android:inputType="none"
                    android:text="@string/zawgyi_string"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/application_unicode_font_label"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/unicode_string"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
